--- a/resources/common/css/common.css
+++ b/resources/common/css/common.css
@@ -33,21 +33,6 @@ header, hgroup, main, nav, section, summary {
   display: block;
 }
 
-/* Remove most spacing between table cells */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-td,
-th {
-  padding: 0;
-}
-
-ol, ul {
-  list-style: none;
-}
-
 /**
  * Apply a natural box layout model to all elements:
  * (http://www.paulirish.com/2012/box-sizing-border-box-ftw/)
@@ -59,6 +44,22 @@ ol, ul {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
  }
+
+/* Remove most spacing between table cells */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td,
+th {
+  padding: 0;
+}
+
+ol,
+ul {
+  list-style: none;
+}
 
 /*-----------------------------------------------------------------------------
  * 2. NORMALIZE
