--- a/resources/common/css/common.css
+++ b/resources/common/css/common.css
@@ -83,7 +83,6 @@ body {
 html,
 body,
 .wrapper {
-  height: 100%;
 }
 
 /**
@@ -294,4 +293,36 @@ button { cursor: pointer; }
 .visible {
   display: block;
   visibility: visible;
+}
+
+/*-----------------------------------------------------------------------------
+ * FONTS
+ *------------------------------------------------------------------------------*/
+
+@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic);
+
+/*-----------------------------------------------------------------------------
+ * FRAMEWORK
+ *------------------------------------------------------------------------------*/
+
+.wrapper {
+    background:url('../img/background.png') center top no-repeat,
+                #000;
+    width: 100%;
+
+}
+
+.section {
+    overflow: hidden;
+    max-width: 1105px;
+    margin: 0 auto;
+}
+
+.btn {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    font-family: 'PT Sans', sans-serif;
+    color: #fff;
+    box-sizing: border-box;
 }
